[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/VideoPlayer.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_right = -10.0
offset_bottom = -10.0

[node name="InfoLabel" type="Label" parent="Controls"]
layout_mode = 2
text = "No video loaded"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Controls"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Load Video File"

[node name="HSeparator2" type="HSeparator" parent="Controls"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Pause/Resume"

[node name="StopButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Stop"

[node name="HSeparator3" type="HSeparator" parent="Controls"]
layout_mode = 2

[node name="PositionSlider" type="HSlider" parent="Controls"]
layout_mode = 2
max_value = 100.0

[node name="HSeparator4" type="HSeparator" parent="Controls"]
layout_mode = 2

[node name="HardwareAcceleration" type="CheckBox" parent="Controls"]
layout_mode = 2
button_pressed = true
text = "Hardware Acceleration"

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(800, 600)
file_mode = 0
access = 2